force-app/main/default/objects/Application_Course_Preference__c.object
<CustomObject>
    <fields>
        <fullName>English_Entry_Mode__c</fullName>
        <description>Capture english language capability</description>
        <label>English Entry Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VCE English Equivalent</fullName>
                </value>
                <value>
                    <fullName>Language of Instruction</fullName>
                </value>
                <value>
                    <fullName>English Test Results</fullName>
                </value>
                <value>
                    <fullName>Monash English Pathway</fullName>
                </value>
                <value>
                    <fullName>Valid and Verified Professional Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrolment_Category__c</fullName>
        <description>Maps to adm_course_appl_instance.ENROLMENT_CAT</description>
        <label>Enrolment Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Qualification_Status_LOV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LOV lookup to the qualification status values</description>
        <inlineHelpText>Indicates if the applicant is eligible for consideration.</inlineHelpText>
        <label>Entry Qualification Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>List_of_Values__c.Type__c</field>
                <operation>equals</operation>
                <value>Entry Qualification</value>
            </filterItems>
            <filterItems>
                <field>List_of_Values__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Application Course Preferences (Entry Qualification Status)</relationshipLabel>
        <relationshipName>Entry_Qualification_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entry_Qualification_Status__c</fullName>
        <description>This field is used for an Admissions assessor to capture the entry qualification status of an Application Course Preference. Values in this field are not displayed on portals, and not used in integrations. The values in this field will flow to the Entry_Qualification_Status_LOV__c field when certain conditions are fulfilled. The Entry_Qualification_Status_LOV__c is used in integrations.</description>
        <label>Entry Qualification Status(Unused)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOT-APPLIC</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>QUALIFIED</fullName>
                </value>
                <value>
                    <fullName>NOT-QUAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Completion_Period__c</fullName>
        <description>Maps to adm_course_appl_instance.EXPECTED_COMPLETION_PERD</description>
        <label>Expected Completion Period</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Year__c</fullName>
        <label>Expected Completion Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Fund_Duration_Value__c</fullName>
        <description>HDR research program external fund duration</description>
        <label>External Fund Duration/Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Funding_Name__c</fullName>
        <description>HDR research program external fund name</description>
        <label>External Funding Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Funding_Type__c</fullName>
        <description>Graduate research program external funding type</description>
        <label>External Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stipend / Living Allowance</fullName>
                </value>
                <value>
                    <fullName>Tuition / Fee Paying</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR research program external funding.</description>
        <label>External Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Used for OES</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR research program external supervisor</description>
        <label>External Supervisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Faculty_Queue_API_Name__c</fullName>
        <description>Used to determine which Queue (public group) based on Managing Faculty for assigning ACP Tasks. This field is used in ACP work relay process</description>
        <formula>CASE( Managing_Faculty__c ,
    &quot;Faculty of Art, Design and Architecture&quot;,&quot;WR_Fac_Art_Design_Architecture&quot;,
    &quot;Faculty of Arts&quot;,&quot;WR_Fac_Arts&quot;,
    &quot;Faculty of Business and Economics&quot;, &quot;WR_Fac_BusEco&quot;,
    &quot;Faculty of Education&quot;, &quot;WR_Fac_Education&quot;,
    &quot;Faculty of Engineering&quot;, &quot;WR_Fac_Engineering&quot;,
    &quot;Faculty of Information Technology&quot;, &quot;WR_Fac_IT&quot;,
    &quot;Faculty of Law&quot;, &quot;WR_Fac_Law&quot;,
    &quot;Faculty of Medicine, Nursing and Health Sciences&quot;, &quot;WR_Fac_MNHS&quot;,
    &quot;Faculty of Pharmacy and Pharmaceutical Sciences&quot;, &quot;WR_Fac_Pharmacy&quot;,
    &quot;Faculty of Science&quot;, &quot;WR_Fac_Science&quot;,
    &quot;Monash University English Language Centre&quot;, &quot;WR_Fac_MUELC&quot;,
    &quot;Monash College Diplomas&quot;, &quot;WR_Fac_Monash_College&quot;,
    &quot;Monash College&quot;, &quot;WR_Fac_Monash_College&quot;,
    &quot;Monash University Foundation Year MUFY&quot;, &quot;WR_Fac_MUFY&quot;,
    &quot;Monash University Foundation Year&quot;, &quot;WR_Fac_MUFY&quot;,
    &quot;WR_Central_Admissions_Exception&quot;)</formula>
        <label>Faculty Queue API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Student_Email_CC__c</fullName>
        <description>All emails going to the student via Salesforce will be copied to this email address. Updated via a Process Builder and a Flow with same name.</description>
        <label>Faculty Student Email CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fee_Category__c</fullName>
        <description>Fee Category is the type of course fees that the student will be charged if they enrol. Examples are AU_INT (Australia: International student), AU_DOM_FF (Australia: Domestic student full fee), ZA_INT_T (South Africa: International</description>
        <inlineHelpText>Fee Category is the type of course fees that the student will be charged if they enrol. Examples are AU_INT (Australia: International student), AU_DOM_FF (Australia: Domestic student full fee), ZA_INT_T (South Africa: International</inlineHelpText>
        <label>Fee Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU_INT</fullName>
                </value>
                <value>
                    <fullName>AU_DOM_FF</fullName>
                </value>
                <value>
                    <fullName>ZA_INT_T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option__c</fullName>
        <description>Maps to adm_course_appl_instance.HECS_PAYMENT_OPTION</description>
        <label>Fee Payment Option</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Unit_Enrolment_Date__c</fullName>
        <formula>Course_Attempt__r.First_Unit_Enrolment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Unit Enrolment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <description>a checkbox to determine whether the Application is from the my.app portal or from Callista migration.</description>
        <formula>Application__r.From_Portal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>a checkbox to determine whether the Application is from the my.app portal or from Callista migration.</inlineHelpText>
        <label>From Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <description>Maps to adm_course_appl_instance.FUNDING_SOURCE</description>
        <label>Funding Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTE_Decision__c</fullName>
        <description>This field is used to provide details of the GTE Decision that was made on the Application on the ACP.</description>
        <formula>IF(NOT(ISBLANK(TEXT(Application__r.GTE_Decision__c))),
TEXT(Application__r.GTE_Decision__c) &amp; &quot; on &quot; &amp; 
TEXT(DAY(DATEVALUE(Application__r.GTE_Last_Completed_On__c))) &amp; &quot;/&quot; &amp; 
TEXT(MONTH(DATEVALUE(Application__r.GTE_Last_Completed_On__c))) &amp; &quot;/&quot; &amp;
TEXT(YEAR(DATEVALUE(Application__r.GTE_Last_Completed_On__c))),
&quot; &quot;)</formula>
        <label>GTE Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTE_Review_Group__c</fullName>
        <label>GTE Review Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>Text(Applicant__r.Gender__c)</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GradRes_Callista_Id__c</fullName>
        <description>Graduate Research Callista Id</description>
        <label>GradRes Callista Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduate_Research_Application_Type__c</fullName>
        <description>Graduate research application type in ACP</description>
        <label>Graduate Research Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admission and Scholarship</fullName>
                </value>
                <value>
                    <fullName>Admission</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Previous_Res_Degree_or_Scholarship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Previous Res Degree or Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intake_Period__c</fullName>
        <description>Populate by MIX using Callista Intake Year and Semester data</description>
        <label>Intake Period</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Deferred__c</fullName>
        <description>Is the ACP deferred?</description>
        <formula>IF(
      AND(
        NOT(ISBLANK(Deferred_Commencement_Period__c)),
        OR(
          Deferment_Status_LOV__r.Value__c = &apos;APPROVED&apos;,
          Deferment_Status_LOV__r.Value__c = &apos;COND-PAID&apos;,
          Deferment_Status_LOV__r.Value__c = &apos;WITHDRN-CA&apos;,
          Deferment_Status_LOV__r.Value__c = &apos;APPROVED-R&apos;
        )
      ), 
      TRUE,
      FALSE
    )</formula>
        <label>Deferred?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justify_External_Attendance__c</fullName>
        <description>HDR indicate what arrangements have been made for off campus</description>
        <label>Justify External Attendance</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_API__c</fullName>
        <description>To check whether the record was updated by the API or a user</description>
        <label>LastModifiedBy API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate_API__c</fullName>
        <description>Timestamp set by an external system (via API) in order to define when the record was updated. If this value is older then the current SystemModStamp of the record, then the Salesforce copy is regarded new and the updated is rejected, refer to ContactServices.rejectOutOfDateUpdate() trigger implementation.</description>
        <label>LastModifiedDate API</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_sync_date_time__c</fullName>
        <description>Last sync date time to callista</description>
        <label>Last sync date time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Application_ID__c</fullName>
        <label>Legacy Application ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Payment_Type_ID__c</fullName>
        <label>Legacy Payment Type ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LongComments__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Long Comments</description>
        <inlineHelpText>Long Comments</inlineHelpText>
        <label>Long Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty_Text__c</fullName>
        <description>For partitioning sharing rules. Populated by a PB.</description>
        <label>Managing Faculty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <description>The owner or manager of the selected course</description>
        <formula>Course__r.Faculty_Description__c</formula>
        <label>Managing Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marks__c</fullName>
        <label>Marks</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Upgrade_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GRT Flag to transfer current research masters enrolment to PhD</description>
        <label>Master Upgrade Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <formula>TEXT(Applicant__r.Nationality__c)</formula>
        <label>Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Condition__c</fullName>
        <label>Offer Condition</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Response_Date__c</fullName>
        <description>Date this offer will lapse</description>
        <inlineHelpText>Date this offer will lapse</inlineHelpText>
        <label>Offer Lapse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Response_Status_LOV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Response Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>List_of_Values__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>List_of_Values__c.Type__c</field>
                <operation>equals</operation>
                <value>Offer Response</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Application Course Preferences (Offer Response Status)</relationshipLabel>
        <relationshipName>Offer_Response_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Response_Status__c</fullName>
        <label>Offer Response Status(Unused)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACC-DEL</fullName>
                </value>
                <value>
                    <fullName>ACCEPT-CND</fullName>
                </value>
                <value>
                    <fullName>ACCEPTED</fullName>
                </value>
                <value>
                    <fullName>ACCEPT-PRV</fullName>
                </value>
                <value>
                    <fullName>ACC-NZPR</fullName>
                </value>
                <value>
                    <fullName>DEFERRAL</fullName>
                </value>
                <value>
                    <fullName>LAPSED</fullName>
                </value>
                <value>
                    <fullName>NO-RESP</fullName>
                </value>
                <value>
                    <fullName>NOT-APPLIC</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Round__c</fullName>
        <description>Maps to Callista adm_course_appl_instance.OFFER_ROUND</description>
        <label>Offer Round</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnHold_Comments__c</fullName>
        <description>Additional comments for On Hold Status</description>
        <label>Additional Comments (On Hold)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hold_Flag__c</fullName>
        <formula>IF(On_Hold__c,IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/flag_orange.png&quot;,&quot;On Hold&quot;,20,20), NULL)</formula>
        <label>On Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <description>ON Hold reason for ACP when assessor set Status = &quot;On Hold&quot;.</description>
        <label>On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Owner_Team__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant Input required</fullName>
                </value>
                <value>
                    <fullName>Conditional offer issued</fullName>
                </value>
                <value>
                    <fullName>Credit Assessment required</fullName>
                </value>
                <value>
                    <fullName>DSS input required</fullName>
                </value>
                <value>
                    <fullName>Full offer issued</fullName>
                </value>
                <value>
                    <fullName>Genuine Student Check required</fullName>
                </value>
                <value>
                    <fullName>Qualification Equivalence required</fullName>
                </value>
                <value>
                    <fullName>Specialist selection required</fullName>
                </value>
                <value>
                    <fullName>Pending Acceptance Document (non-U18)</fullName>
                </value>
                <value>
                    <fullName>Pending Acceptance Document (U18)</fullName>
                </value>
                <value>
                    <fullName>Pending Conditional Acceptance documents</fullName>
                </value>
                <value>
                    <fullName>Pending Conditional CoE Acceptance documents</fullName>
                </value>
                <value>
                    <fullName>Pending investigation/confirmation (Other)</fullName>
                </value>
                <value>
                    <fullName>Callista Migration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Code__c</fullName>
        <description>This field stores the unique faculty, college or school identifier code, populated from Callista, primarily used by Central Admissions for International Applications</description>
        <label>Org Unit Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Description__c</fullName>
        <description>Populated from Callista, indicates the name of the faculty</description>
        <label>Org Unit Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The initial offering received back from Callista. Retained through a deferral/override cycle.</description>
        <label>Original Course Offering</label>
        <referenceTo>Course_Offering__c</referenceTo>
        <relationshipLabel>ACP (Original Course Offering)</relationshipLabel>
        <relationshipName>Application_Course_Preferences_Original</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome_Status_LOV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outcome Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>List_of_Values__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>List_of_Values__c.Type__c</field>
                <operation>equals</operation>
                <value>Outcome</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Application Course Preferences (Outcome Status)</relationshipLabel>
        <relationshipName>Outcome_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome_Status_Value__c</fullName>
        <formula>Outcome_Status_LOV__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Status Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Status__c</fullName>
        <label>Outcome Status(Unused)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP-PROGRES</fullName>
                </value>
                <value>
                    <fullName>IN-PROGRES</fullName>
                </value>
                <value>
                    <fullName>AP-LAPSED</fullName>
                </value>
                <value>
                    <fullName>APP-WDRWN</fullName>
                </value>
                <value>
                    <fullName>CHANGE-R</fullName>
                </value>
                <value>
                    <fullName>CITZ-CHNG</fullName>
                </value>
                <value>
                    <fullName>ERROR-ACAL</fullName>
                </value>
                <value>
                    <fullName>ERROR-ACAT</fullName>
                </value>
                <value>
                    <fullName>ERROR-CRS</fullName>
                </value>
                <value>
                    <fullName>FAC-APPROV</fullName>
                </value>
                <value>
                    <fullName>HD-PROGRES</fullName>
                </value>
                <value>
                    <fullName>IN-PROG-MI</fullName>
                </value>
                <value>
                    <fullName>INTAKE-CL</fullName>
                </value>
                <value>
                    <fullName>OFFER</fullName>
                </value>
                <value>
                    <fullName>OFFER-C-E</fullName>
                </value>
                <value>
                    <fullName>OFFER-C-FY</fullName>
                </value>
                <value>
                    <fullName>OFFER-C-MC</fullName>
                </value>
                <value>
                    <fullName>OFFER-COND</fullName>
                </value>
                <value>
                    <fullName>OFFER-LAP</fullName>
                </value>
                <value>
                    <fullName>OFFER-PROV</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
                <value>
                    <fullName>REJECT-GAC</fullName>
                </value>
                <value>
                    <fullName>REJECT-GTE</fullName>
                </value>
                <value>
                    <fullName>REJECT-PSC</fullName>
                </value>
                <value>
                    <fullName>REJECT-Q</fullName>
                </value>
                <value>
                    <fullName>REJ-MICERT</fullName>
                </value>
                <value>
                    <fullName>REJ-MIDIP</fullName>
                </value>
                <value>
                    <fullName>REJ-MIMUFY</fullName>
                </value>
                <value>
                    <fullName>REJ-MINEXT</fullName>
                </value>
                <value>
                    <fullName>VOIDED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Academic_CI_Sequence__c</fullName>
        <label>Override Academic CI Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Admission_CI_Sequence__c</fullName>
        <label>Override Admission CI Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Admission_Calendar_Type__c</fullName>
        <label>Override Admission Calendar Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Outcome_Reason__c</fullName>
        <description>Maps to adm_course_appl_instance.ADM_OUTCOME_STATUS_REASON</description>
        <label>Override Outcome Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>This is used in easily get the name of queue or user - owner of the ACP</description>
        <formula>IF( !ISBLANK( Owner:Queue.Id ),
Owner:Queue.QueueName,
Owner:User.Full_Name__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <label>Owner Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment</fullName>
                    <default>true</default>
                    <label>Assessment</label>
                </value>
                <value>
                    <fullName>Acceptance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentCheckURL__c</fullName>
        <label>PaymentCheckURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <formula>Applicant__r.Person_ID__c</formula>
        <label>Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Sequence_Number__c</fullName>
        <description>AP Sequence Number from Callista</description>
        <label>Portal Sequence Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precedent_ID__c</fullName>
        <description>Captures the Precedence ID related to a student successfully gaining academic entry into a course. Precedence IDs are captured based on information in CPAR, UERT, PERT. This field is being used for the Admissions process by the Admissions team in the Admissions app for Admissions related purposes. {JIRA: SFTLG-120}</description>
        <label>Precedent ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preference_Number__c</fullName>
        <description>previous label: Pref#</description>
        <label>Preference Rank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_GRT_Application_Date__c</fullName>
        <description>HDR previous GRT application date</description>
        <label>Previous GRT Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Field to capture priority of ACP</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Commencement_Date__c</fullName>
        <description>Maps to adm_course_appl_instance.PRPSD_COMMENCEMENT_DT</description>
        <label>Proposed Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPL_Points__c</fullName>
        <label>RPL Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_for_DSS_Review__c</fullName>
        <description>Flag used to indicate whether or not the ACP is at a stage where it&apos;s ready for the DSS review check to be carried out.</description>
        <label>Ready for DSS Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receipt_Number__c</fullName>
        <label>Receipt Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>